--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,12 @@
   "homepage": "https://github.com/bagistoplus/visual-debut",
   "repositories": [
     {
-      "type": "path",
-      "url": "../visual"
+      "type": "vcs",
+      "url": "https://github.com/lucasfrankinc/visual"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/lucasfrankinc/couleur"
     }
   ],
   "authors": [
@@ -30,7 +34,7 @@
   "require": {
     "php": "^8.1",
     "illuminate/contracts": "^10.0||^11.0",
-    "bagistoplus/visual": "@dev",
+    "bagistoplus/visual": "dev-use-clone",
     "livewire/livewire": "^3.6"
   },
   "require-dev": {
