--- a/public/themes/shop/visual-debut/manifest.json
+++ b/public/themes/shop/visual-debut/manifest.json
@@ -1,11 +1,11 @@
 {
   "resources/assets/css/index.css": {
-    "file": "assets/index-BUdtBocp.css",
+    "file": "assets/index-DB0-s57Z.css",
     "src": "resources/assets/css/index.css",
     "isEntry": true
   },
   "resources/assets/ts/shop/index.ts": {
-    "file": "assets/index-DFmCcRzu.js",
+    "file": "assets/index-BqHF86LZ.js",
     "name": "index",
     "src": "resources/assets/ts/shop/index.ts",
     "isEntry": true
